将图片路径改为了相对路径

--- a/FunRec学习手记/2.1.2nltk下载数据到指定文件夹.md
+++ b/FunRec学习手记/2.1.2nltk下载数据到指定文件夹.md
@@ -63,7 +63,7 @@ print(nltk.data.path)
 
 这里我在该目录下创建了nltk_data文件夹，并添加到了系统变量中。
 
-![image-20240724111228858](E:\Code\github\CS-Notes\FunRec学习手记\assets\image-20240724111228858.png)
+![image-20240724111727509](./assets/image-20240724111727509.png)
 
 重新运行代码`python -m nltk.downloader popular`，可以看到文件下载到了指定的文件夹中：
 
