重新上传了图片

--- a/FunRec学习手记/2.1.1奇异值分解(SVD)的原理详解及推导.md
+++ b/FunRec学习手记/2.1.1奇异值分解(SVD)的原理详解及推导.md
@@ -20,7 +20,7 @@ Chapter2结合其几何意义分析SVD，通俗易懂，**建议直接参考Chap
 
 用SVD可以很容易得到任意矩阵的满秩分解，用满秩分解可以对数据做压缩。可以用SVD来证明对任意M × N M\times NM×N的矩阵均存在如下分解：
 
-![img](./assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3d1emhvbmdxaWFuZw==,size_1,color_FFFFFF,t_70#pic_center# =200.png)
+![image-20240724112733620](./assets/image-20240724112733620-1721791657419-11.png)
 
 这个可以应用在数据降维压缩上！在数据相关性特别大的情况下存储X和Y矩阵比存储A矩阵占用空间更小！在开始讲解SVD之前，先补充一点矩阵代数的相关知识。
 
@@ -28,7 +28,7 @@ Chapter2结合其几何意义分析SVD，通俗易懂，**建议直接参考Chap
 
 正交矩阵是在欧几里得空间里的叫法，在酉空间里叫酉矩阵，一个正交矩阵对应的变换叫正交变换，**这个变换的特点是不改变向量的尺寸和向量间的夹角**，那么它到底是个什么样的变换呢？看下面这张图
 
-![img](./assets/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3d1emhvbmdxaWFuZw==,size_1,color_FFFFFF,t_70#pic_center.png)
+<img src="./assets/image-20240724112826666.png" alt="image-20240724112826666" style="zoom: 50%;" />
 
 假设二维空间中的一个向量OA，它在标准坐标系也即e1、e2表示的坐标是中表示为(a,b)’（用’表示转置），现在把它用另一组坐标e1’、e2’表示为(a’,b’)’，存在矩阵U使得(a’,b’)’=U(a,b)’，则U即为正交矩阵。
 
@@ -85,11 +85,15 @@ $$
 现在假设存在mxm的满秩对称矩阵A，它有m个不同的特征值，设特征值为$\lambda_i$, 对应的特征向量$x_i$， 则有
 
 ![image-20240724112019813](./assets/image-20240724112019813.png)
+
 进而
 
 ![image-20240724112042431](./assets/image-20240724112042431.png)
+
 所以可得到A的特征值分解（由于对称阵特征向量两两正交，所以U为正交阵，**正交阵的逆矩阵等于其转置**）
+
 ![在这里插入图片描述](./assets/4e98094b9af7eb4779fabfbe356fb1e0.png)
+
 这里假设A有m个不同的特征值，实际上，只要A是对称阵其均有如上分解。
 
 矩阵A分解了，相应的，其对应的映射也分解为三个映射。现在假设有x向量，用Ａ将其变换到Ａ的列空间中，那么首先由U’先对x做变换：
@@ -108,9 +112,13 @@ x = a_1 x_1 + a_2 x_2 + ⋯ + a_m x_m
 $$
 
 这个假设是向量$x$原来的坐标， 那么， 经过第一个变换之后， 就可以把向量$x$变成$[a_1, a_2, …,a_m]’$。
+
 ![在这里插入图片描述](./assets/35a97325f3e00d9548f6ece147b8d7f9.png)
+
 紧接着，在新的坐标系表示下，由中间那个对角矩阵对新的向量坐标换，其结果就是将向量往各个轴方向拉伸或压缩：
+
 ![在这里插入图片描述](./assets/c251c69271bc436938c797812f04c0a8.png)
+
 从上图可以看到，如果A不是满秩的话，**那么就是说对角阵的对角线上元素存在0，这时候就会导致维度退化， 这样就可以降维了看没看到**，这样就会使映射后的向量落入m维空间的子空间中。
 
 最后一个变换就是U对拉伸或压缩后的向量做变换，由于U和U’是互为逆矩阵，所以U变换是U’变换的逆变换。
@@ -118,6 +126,7 @@ $$
 因此，从对称阵的分解对应的映射分解来分析一个矩阵的变换特点是非常直观的。假设对称阵特征值全为1那么显然它就是单位阵，如果对称阵的特征值有个别是0其他全是1，那么它就是一个正交投影矩阵，它将m维向量投影到它的列空间中。
 
 根据对称阵A的特征向量，如果A是2*2的，那么就可以在二维平面中找到这样一个矩形，是的这个矩形经过A变换后还是矩形：
+
 ![在这里插入图片描述](./assets/2e378c395204f2479c0f91fe54655916.png)
 
 这个矩形的选择就是**让其边都落在A的特征向量方向上**，如果选择其他矩形的话变换后的图形就不是矩形了！
