--- a/就业/算法刷题总结.md
+++ b/就业/算法刷题总结.md
@@ -203,6 +203,10 @@ Point* ptr = &p; // ptr 是指向 p 的指针
 
 在 `Point* ptr` 中，`Point` 是数据类型，`*` 表示 `ptr` 是一个指向 `Point` 类型的指针。
 
+### 3. 什么时候使用Dummyhead？
+
+一般增加删除时？因为可能需要增删头节点，因此有dummyhead的情况下，代码可以比较统一。
+
 
 
 ## LeetCode
@@ -223,6 +227,10 @@ Point* ptr = &p; // ptr 是指向 p 的指针
 方法同剑指offer——[反转链表](#反转链表)
 
 注意特殊情况判断：head == nullptr，直接返回head即可。
+
+> 细节：
+>
+> 1. 不要使用dummyhead，会使情况变复杂，只需要判断cur是否==head即可。
 
 ### [24. 两两交换链表中的节点](https://leetcode.cn/problems/swap-nodes-in-pairs/)
 
@@ -254,6 +262,12 @@ Point* ptr = &p; // ptr 是指向 p 的指针
 1. 先找环内任意节点（追逐法）；
 2. 查看环内节点个数count；
 3. 将fast和slow重新指向dummyhead，fast先走count（环内节点个数）步，然后fast和slow同时步进，相遇之处即环的入口。
+
+### [2. 两数相加](https://leetcode.cn/problems/add-two-numbers/)
+
+进位求和（carry表示进位），想清楚每一步的做法即可。
+
+> 注意：不能先转为整数，相加，再转为List，如果有很大的数会溢出。
 
 
 
@@ -479,9 +493,154 @@ while cur.next and cur.next.next:
 
 类似三数之和，也是双指针，只是将开始的一重循环遍历i，改成了两重循环遍历k和i。注意：
 1. k和i去重时有所不同：
-`if (k > 0 && nums[k] == nums[k - 1]) continue;  // 去重`
-以及` if (i > k + 1 && nums[i] == nums[i - 1]) continue;  // 去重`
-因为数组是`[-4, -3, -2, -1]`，`target`是`-10`，不能因为`-4 > -10`而跳过。
+  `if (k > 0 && nums[k] == nums[k - 1]) continue;  // 去重`
+  以及` if (i > k + 1 && nums[i] == nums[i - 1]) continue;  // 去重`
+  因为数组是`[-4, -3, -2, -1]`，`target`是`-10`，不能因为`-4 > -10`而跳过。
+
+2. 四数相加可能会溢出，需要转换为long类型：
+
+  > 注意long不能加给计算后的结果，因为计算后已经溢出：
+  >
+  > `if ((long)(nums[i] + nums[j] + nums[left] + nums[right]) > target)` ❌
+  >
+  > 应该先将其中一哥操作数转为long，这样运算结果自然也为long：
+  >
+  > `if ((long)nums[i] + nums[j] + nums[left] + nums[right] > target)` ✅
+
+
+
+# 字符串
+
+## 知识整理
+
+### 1. <a id="KMP算法">KMP算法</a>
+
+**KMP算法解决什么问题：**给定一个字符串，判断另一个字符串是否在该字符串中出现过。
+
+> 该方法比较难理解，结合视频：
+>
+> [【帮你把KMP算法学个通透！（理论篇）】](https://www.bilibili.com/video/BV1PD4y1o7nd/?share_source=copy_web&vd_source=01d44ca12928de4e09572201ce260e54)
+>
+> [【帮你把KMP算法学个通透！（求next数组代码篇）】](https://www.bilibili.com/video/BV1M5411j7Xx/?share_source=copy_web&vd_source=01d44ca12928de4e09572201ce260e54)
+
+KMP的核心算法在于使用了“最长相同前后缀表”，它通常使用一个next数组来实现。
+
+next数组的构建过程如下：
+
+> 该实现方法采用“如果当前s[i]处不匹配，就回到next[i-1]处的元素继续匹配”这个逻辑，也就是下列第一行：
+>
+>  <img src="./assets/image-20241216205545537.png" alt="image-20241216205545537" style="zoom: 33%;" />
+
+```C++
+void getNext(int* next, const string& s){
+    int j = 0;
+    next[0] = j;
+    for(int i = 1; i < s.size(); i++) { // 注意i从1开始
+        while (j > 0 && s[i] != s[j]) { // 前后缀不相同了
+            j = next[j - 1]; // 向前回退
+        }
+        if (s[i] == s[j]) { // 找到相同的前后缀
+            j++;
+        }
+        next[i] = j; // 将j（前缀的长度）赋给next[i]
+    }
+}
+```
+
+该构建过程比较复杂，下面分析一下为什么next数组能够统计“最长相同前后缀”：
+
+1. 首先将j初始化为0：因为只有一个元素时，该元素没有前缀/后缀，直接赋0；将next[0]初始化为j，因为j既表示前缀末尾指针，又表示了相同前后缀的长度，相当于next[0]长度设置为j = 0。
+
+2. 此时从第二个元素开始遍历后缀：
+
+   a. 如果s[i] != s[j]说明前后缀不相同，此时需要回退到next[j-1]，表示从前一串最长前后缀处重新开始匹配（跟文本串和模式串的匹配不一致时的处理过程一致）。
+
+   b. 如果s[i] == s[j]就使j++，表示`当前的后缀元素匹配上了前缀`，因为j表示相同前后缀长度所以j++。
+
+   > 这里比较有意思，如果不匹配则一直回退到之前能匹配上的最长前后缀，但是如果匹配了则只j++一次。
+   >
+   > 如此一来，当前的j只会在之前“次最长“前后缀长度上+1，也就匹配上了之前手推前后缀匹配的过程。
+
+   c. 将最长前后缀长度j赋给next[i]。
+
+## LeetCode
+
+### [344. 反转字符串](https://leetcode.cn/problems/reverse-string/)
+
+双指针，互换。
+
+### [541. 反转字符串 II](https://leetcode.cn/problems/reverse-string-ii/)
+
+每次将i += (k * 2)，然后判断i + k <= s.size()。
+这里题目主要考察对判断语句的把控，因此可以适当使用库函数reverse。
+
+### [151. 反转字符串中的单词*](https://leetcode.cn/problems/reverse-words-in-a-string/)
+
+> 比较复杂，捋清思路后不算难，关键在于**判断什么时候需要翻转字符串？**
+
+分为三步：1. 去掉多余空格；2. 反转字符串；3. 翻转每串字符。
+
+> 注意：
+>
+> 去掉空格中可参考 27.移除元素；
+> 另外，三个步骤中都大量使用了双指针方法。
+
+### [28. 找出字符串中第一个匹配项的下标](https://leetcode.cn/problems/find-the-index-of-the-first-occurrence-in-a-string/)
+
+> 比较复杂，注意理解KMP的内核，视频可以反复看。
+
+使用[KMP算法](#KMP算法)，具体见代码随想录，及视频讲解。
+
+### [459. 重复的子字符串](https://leetcode.cn/problems/repeated-substring-pattern/)
+
+ <img src="./assets/image-20241217105406085.png" alt="image-20241217105406085" style="zoom: 33%;" />
+
+**方法一：将字符串s重复两次，看中间是否又出现了s（13ms）**
+
+比如字符串s为“abcabc”，将字符串重复两次s+s：“abc｜abc + abc｜abc”，可以看到中间又出现了字符串s，说明该字符串为重复子字符串。
+
+> 注意，在实际比较时需要将s+s的首尾字符去掉，不然s+s的前半段/后半段肯定是s，查询时会永远返回true。
+
+**方法二：KMP算法（1273ms）**（复杂度较高，优先使用方法一）
+
+字符串 减去 最长相等前后缀，剩下的几个字符，重复的子字符串。
+
+然后看 字符串长度 % 剩下字符长度 是否为0
+
+> 至于为什么“字符串 减去 最长相等前后缀，剩下的几个字符，就是重复子字符串”可以看图片，或回看视频讲解。
+
+
+
+
+
+## KamaCoder
+
+### [54. 替换数字（第八期模拟笔试）](https://kamacoder.com/problempage.php?pid=1064)
+
+核心：双指针，一个newpointer指向新string末尾，一个oldpointer指向原本string末尾位置。
+
+当new != ‘数字’时，直接将old赋给new然后都前移；当old == ‘数字’时，依次填充number，然后都前移。
+
+> 注意：
+>
+> 1. new和old都是从末尾开始，这样可以避免数组添加字符时需要频繁后移元素的不便。
+> 2. 对于字符串类操作，最好使用string + cin/cout，因为c不支持读取到string，只有c++可以：
+>
+> ```c
+> // C只支持读取到char[]
+> char temp[1000]; // 临时字符数组
+> scanf("%s", temp); // 使用 scanf 读取到临时数组
+> ```
+
+### [55. 右旋字符串（第八期模拟笔试）](https://kamacoder.com/problempage.php?pid=1065)
+
+1. 先翻转0～end - n；
+2. 再翻转end - n～end；
+3. 翻转整个字符串。
+
+> 还是那句话，关键在于判断什么时候用**翻转字符串**这个技巧。
+
+
 
 
 
