--- a/就业/算法刷题总结.md
+++ b/就业/算法刷题总结.md
@@ -493,9 +493,9 @@ while cur.next and cur.next.next:
 
 类似三数之和，也是双指针，只是将开始的一重循环遍历i，改成了两重循环遍历k和i。注意：
 1. k和i去重时有所不同：
-  `if (k > 0 && nums[k] == nums[k - 1]) continue;  // 去重`
-  以及` if (i > k + 1 && nums[i] == nums[i - 1]) continue;  // 去重`
-  因为数组是`[-4, -3, -2, -1]`，`target`是`-10`，不能因为`-4 > -10`而跳过。
+    `if (k > 0 && nums[k] == nums[k - 1]) continue;  // 去重`
+    以及` if (i > k + 1 && nums[i] == nums[i - 1]) continue;  // 去重`
+    因为数组是`[-4, -3, -2, -1]`，`target`是`-10`，不能因为`-4 > -10`而跳过。
 
 2. 四数相加可能会溢出，需要转换为long类型：
 
@@ -639,6 +639,51 @@ void getNext(int* next, const string& s){
 3. 翻转整个字符串。
 
 > 还是那句话，关键在于判断什么时候用**翻转字符串**这个技巧。
+
+
+
+# 栈与队列
+
+## LeetCode
+
+### [232. 用栈实现队列](https://leetcode.cn/problems/implement-queue-using-stacks/)
+
+使用两个栈stIn和stOut，就可以用stOut获取到stIn中的自底向上的元素顺序：
+
+ <img src="./assets/image-20241225105204568.png" alt="image-20241225105204568" style="zoom:25%;" />
+
+注意peek可以复用this->pop()，然后再push进去。
+
+### [225. 用队列实现栈](https://leetcode.cn/problems/implement-stack-using-queues/)
+
+不能跟“栈实现队列“一样，用两个队列模拟栈，因为队列是先进先出，
+
+用另一个队列也是如此，并不能得到队尾元素。
+
+解决方式：不过可以取出然后再从队尾push并计数，当取到最后一个元素时return。
+
+### [20. 有效的括号](https://leetcode.cn/problems/valid-parentheses/)
+
+一眼就能看出用栈，但是在push时有个技巧（不要直接push左括号，而是push对应的右括号，这样在匹配时就不用写多个if来判断）：
+
+```c++
+if (s[i] == '(') st.push(')');
+else if (s[i] == '{') st.push('}');
+else if (s[i] == '[') st.push(']');
+```
+
+另外需要注意特殊情况判断：
+
+- 当检测到右括号匹配时：如果栈空则false（避免字符串只有右括号，容易漏）；与栈顶不匹配则false。
+- 最终返回时：如果栈不为空则false（避免字符串只有部分与左括号匹配，容易漏）。
+
+### [1047. 删除字符串中的所有相邻重复项](https://leetcode.cn/problems/remove-all-adjacent-duplicates-in-string/)
+
+基础方法：用栈来存放遍历过的字符，如果栈空或字符与栈顶一致则去除栈顶，否则压入栈中；
+
+> 注意最后从栈中取出字符串时是反向的，需要将字符串做一次翻转。
+
+进阶：用字符串当栈即可，push_back( )、pop_back( )、string.back( )与栈的逻辑一致。
 
 
 
