--- a/就业/算法刷题总结.md
+++ b/就业/算法刷题总结.md
@@ -644,6 +644,16 @@ void getNext(int* next, const string& s){
 
 # 栈与队列
 
+## 知识整理
+
+### 1. 什么是堆？
+
+**堆是一棵完全二叉树，树中每个结点的值都不小于（或不大于）其左右孩子的值。** 如果父亲结点是大于等于左右孩子就是大顶堆，小于等于左右孩子就是小顶堆。
+
+所以大家经常说的大顶堆（堆头是最大元素），小顶堆（堆头是最小元素），如果懒得自己实现的话，就直接用priority_queue（优先级队列）就可以了，底层实现都是一样的，从小到大排就是小顶堆，从大到小排就是大顶堆。
+
+
+
 ## LeetCode
 
 ### [232. 用栈实现队列](https://leetcode.cn/problems/implement-queue-using-stacks/)
@@ -685,13 +695,32 @@ else if (s[i] == '[') st.push(']');
 
 进阶：用字符串当栈即可，push_back( )、pop_back( )、string.back( )与栈的逻辑一致。
 
+### [150. 逆波兰表达式求值](https://leetcode.cn/problems/evaluate-reverse-polish-notation/)
 
+栈，如果是数字就入栈，如果不是就取出栈顶的top1和top2做运算。
 
+### [239. 滑动窗口最大值*(hard)](https://leetcode.cn/problems/sliding-window-maximum/)
 
+> 主要是自建队列与维护，必须要考虑清楚。随想录：[239. 滑动窗口最大值](https://www.programmercarl.com/0239.%E6%BB%91%E5%8A%A8%E7%AA%97%E5%8F%A3%E6%9C%80%E5%A4%A7%E5%80%BC.html#%E7%AE%97%E6%B3%95%E5%85%AC%E5%BC%80%E8%AF%BE)
 
+用deque自建一个队列，
 
+设计单调队列的时候，pop，和push操作要保持如下规则：
 
+1. pop(value)：如果窗口移除的元素value等于单调队列的出口元素，那么队列弹出元素，否则不用任何操作
+2. push(value)：如果push的元素value大于入口元素的数值，那么就将队列入口的元素弹出，直到push元素的数值小于等于队列入口元素的数值为止
 
+保持如上规则，每次窗口移动的时候，只要问que.front()就可以返回当前窗口的最大值。
+
+### [347. 前 K 个高频元素*](https://leetcode.cn/problems/top-k-frequent-elements/)
+
+首先，使用unordered_map计数；
+
+然后，使用priority_queue（优先队列）构建小顶堆，记录频率最高的k个元素；
+
+最后，倒序取出小顶堆中的元素。
+
+> 注意，该方法使用了**优先队列**虽然调用这个函数不难，但是要知道使用原理以及什么时候用；另外，使用该数据类型可能需要自己**重载函数调用运算符**，这些知识都要掌握。
 
 
 
